resources/istio/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: service-a.dev.svc.cluster.local
            subset: v1
            port:
              number: 8080
